deploy: 43650ed580c9eb3ae44026e8be02ced5a7ea2e67

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>API Reference</title>
-     <link href="images/favicon-4a11135f.png" rel="icon" type="image/png" />
+
     <style media="screen">
       .highlight table td { padding: 5px; }
 .highlight table pre { margin: 0; }
@@ -279,9 +279,9 @@
   color: #859900;
 }
     </style>
-    <link href="stylesheets/screen-c9d8fa83.css" rel="stylesheet" media="screen" />
-    <link href="stylesheets/print-953e3353.css" rel="stylesheet" media="print" />
-      <script src="javascripts/all-e033bdd3.js"></script>
+    <link href="stylesheets/screen-8d7a23ba.css" rel="stylesheet" media="screen" />
+    <link href="stylesheets/print-2c600fbb.css" rel="stylesheet" media="print" />
+      <script src="javascripts/all-e9bde216.js"></script>
 
     <script>
       $(function() { setupCodeCopy(); });
@@ -291,12 +291,13 @@
   <body class="index" data-languages="[&quot;shell&quot;,&quot;ruby&quot;,&quot;python&quot;,&quot;javascript&quot;]">
     <a href="#" id="nav-button">
       <span>
-        NAV
-        <img src="images/navbar-cad8cdcb.png" alt="" />
+        <img src="images/navbar-6ad8e2f4.svg" alt="" />
       </span>
     </a>
     <div class="toc-wrapper">
-      <img src="images/logo-2b52f177.png" class="logo" alt="" />
+      <div class="image-logo">
+        <img src="images/dracula-12141f7c.svg" class="logo" alt="" />
+      </div>
         <div class="lang-selector">
               <a href="#" data-language-name="shell">shell</a>
               <a href="#" data-language-name="ruby">ruby</a>
