deploy: 99592f6bc30171cabb14657022cbf216be94a8fb

--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
     </a>
     <div class="toc-wrapper">
       <div class="image-logo">
-        <img src="images/dracula-12141f7c.svg" class="logo" alt="" />
+        <img src="images/logo-2b52f177.png" class="logo" alt="" />
       </div>
         <div class="lang-selector">
               <a href="#" data-language-name="shell">shell</a>
